Add eslint config

--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
 		"eslint-plugin-vue": "^5.0.0",
 		"prettier": "^1.19.1",
 		"vue-template-compiler": "^2.6.10"
+	},
+	"eslintConfig": {
+		"rules": {
+			"no-console": "off"
+		}
 	}
 }
